# euler-train-test

./: README.md  env.example  pyproject.toml
scripts/: run_euler_stream_test.sbatch  run_interactive_stream_test.sh
src/euler_train_stream_test/: __init__.py  cli.py
tests/: test_cli.py
