[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "euler-train-stream-test"
version = "0.1.0"
description = "Synthetic Euler View streaming smoke test for euler-train"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "euler-train>=2.11.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
euler-train-stream-test = "euler_train_stream_test.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
